--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 
+.env
+
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
